unpackaged/objects/BL__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <label>契約店</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>代理店</fullName>
                </value>
                <value>
                    <fullName>ブローカー</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLNaimuTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BL内務担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>BL</relationshipLabel>
        <relationshipName>BL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BlEigyoTanto9__c</fullName>
        <label>BL営業担当者9</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlEigyoTanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BL営業担当</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shimei__c.StaffStatus__c</field>
                <operation>equals</operation>
                <value>在職者</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shimei__c</referenceTo>
        <relationshipLabel>BL (BL営業担当)</relationshipLabel>
        <relationshipName>BlEigyoTanto</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BranchOfInsurance__c</fullName>
        <label>保険種目</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>財産保険</fullName>
                </value>
                <value>
                    <fullName>財産一切保険</fullName>
                </value>
                <value>
                    <fullName>公衆責任保険</fullName>
                </value>
                <value>
                    <fullName>機械保険</fullName>
                </value>
                <value>
                    <fullName>現金保険</fullName>
                </value>
                <value>
                    <fullName>コンピュータ保険</fullName>
                </value>
                <value>
                    <fullName>オフィスパッケージ</fullName>
                </value>
                <value>
                    <fullName>団体傷害/医療保険</fullName>
                </value>
                <value>
                    <fullName>雇主責任保険</fullName>
                </value>
                <value>
                    <fullName>雇主工傷</fullName>
                </value>
                <value>
                    <fullName>PL保険</fullName>
                </value>
                <value>
                    <fullName>職業責任</fullName>
                </value>
                <value>
                    <fullName>店舗賠償責任</fullName>
                </value>
                <value>
                    <fullName>総合賠償責任保険</fullName>
                </value>
                <value>
                    <fullName>物流</fullName>
                </value>
                <value>
                    <fullName>運送賠償</fullName>
                </value>
                <value>
                    <fullName>ゴルファー</fullName>
                </value>
                <value>
                    <fullName>住宅総合</fullName>
                </value>
                <value>
                    <fullName>利益保険</fullName>
                </value>
                <value>
                    <fullName>建設工事保険</fullName>
                </value>
                <value>
                    <fullName>組立工事保険</fullName>
                </value>
                <value>
                    <fullName>逆OTA</fullName>
                </value>
                <value>
                    <fullName>個人意外傷害</fullName>
                </value>
                <value>
                    <fullName>食品責任保険</fullName>
                </value>
                <value>
                    <fullName>信用保険</fullName>
                </value>
                <value>
                    <fullName>OTA（香港）</fullName>
                </value>
                <value>
                    <fullName>自動車保険(香港)</fullName>
                </value>
                <value>
                    <fullName>操業停止損害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>搭乗者傷害保険（香港）</fullName>
                </value>
                <value>
                    <fullName>バイク保険</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>支店</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerKeiyakuStartDate__c</fullName>
        <label>Brokerにて契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancelDate__c</fullName>
        <label>解約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>解約理由</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommissionAmount__c</fullName>
        <label>手数料</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommissionCurrency__c</fullName>
        <label>手数料通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommissionRate__c</fullName>
        <label>手数料率　％</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CommodityName__c</fullName>
        <label>種目詳細</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BranchOfInsurance__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>迅速！物流平安</fullName>
                </value>
                <value>
                    <fullName>物流(内航)</fullName>
                </value>
                <value>
                    <fullName>物流(外航)</fullName>
                </value>
                <value>
                    <fullName>漫遊桜花</fullName>
                </value>
                <value>
                    <fullName>逸行全球</fullName>
                </value>
                <value>
                    <fullName>楽行四海</fullName>
                </value>
                <value>
                    <fullName>楽悠遊</fullName>
                </value>
                <value>
                    <fullName>安居楽行</fullName>
                </value>
                <value>
                    <fullName>住宅総合険</fullName>
                </value>
                <value>
                    <fullName>平安畅行天下</fullName>
                </value>
                <value>
                    <fullName>平安新世界</fullName>
                </value>
                <value>
                    <fullName>万国游踪</fullName>
                </value>
                <value>
                    <fullName>財産保険</fullName>
                </value>
                <value>
                    <fullName>公衆責任保険</fullName>
                </value>
                <value>
                    <fullName>現金保険</fullName>
                </value>
                <value>
                    <fullName>雇主責任保険</fullName>
                </value>
                <value>
                    <fullName>賃貸料損失</fullName>
                </value>
                <value>
                    <fullName>国内</fullName>
                </value>
                <value>
                    <fullName>国外</fullName>
                </value>
                <value>
                    <fullName>財産基本険</fullName>
                </value>
                <value>
                    <fullName>財産総合険</fullName>
                </value>
                <value>
                    <fullName>団体重大疾病</fullName>
                </value>
                <value>
                    <fullName>優逸団体医療補充</fullName>
                </value>
                <value>
                    <fullName>団体交通事故傷害</fullName>
                </value>
                <value>
                    <fullName>Well House</fullName>
                </value>
                <value>
                    <fullName>Well Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>保険料通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>VND</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPAppoint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPアポイント</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EigyoTanto__c</fullName>
        <formula>KeiyakuCompanyName__r.EigyoTanto__r.Name</formula>
        <label>営業担当</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceAmount__c</fullName>
        <label>保険料</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsuranceCompanyName__c</fullName>
        <label>保険会社名称</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>損保ジャパン（中国）</fullName>
                </value>
                <value>
                    <fullName>三井住友（中国）</fullName>
                </value>
                <value>
                    <fullName>日本興亜（中国）</fullName>
                </value>
                <value>
                    <fullName>東京海上日動（中国）</fullName>
                </value>
                <value>
                    <fullName>あいおい（中国）</fullName>
                </value>
                <value>
                    <fullName>平安</fullName>
                </value>
                <value>
                    <fullName>太平洋</fullName>
                </value>
                <value>
                    <fullName>PICC</fullName>
                </value>
                <value>
                    <fullName>民安（中国）</fullName>
                </value>
                <value>
                    <fullName>華泰財産</fullName>
                </value>
                <value>
                    <fullName>中国人寿財産</fullName>
                </value>
                <value>
                    <fullName>陽光人寿</fullName>
                </value>
                <value>
                    <fullName>平安養老</fullName>
                </value>
                <value>
                    <fullName>美亜（AIG）</fullName>
                </value>
                <value>
                    <fullName>LIBERTY（香港）</fullName>
                </value>
                <value>
                    <fullName>AIA（香港）</fullName>
                </value>
                <value>
                    <fullName>AIU（香港）</fullName>
                </value>
                <value>
                    <fullName>AXA（香港）</fullName>
                </value>
                <value>
                    <fullName>BlueCross（香港）</fullName>
                </value>
                <value>
                    <fullName>民安（香港）</fullName>
                </value>
                <value>
                    <fullName>三井住友（香港）</fullName>
                </value>
                <value>
                    <fullName>日本興亜（香港）</fullName>
                </value>
                <value>
                    <fullName>PICC（香港）</fullName>
                </value>
                <value>
                    <fullName>損保ジャパン（香港）</fullName>
                </value>
                <value>
                    <fullName>東京海上日動（香港）</fullName>
                </value>
                <value>
                    <fullName>Zurich（香港）</fullName>
                </value>
                <value>
                    <fullName>AIG（香港）</fullName>
                </value>
                <value>
                    <fullName>SJNK（香港）</fullName>
                </value>
                <value>
                    <fullName>UIC</fullName>
                </value>
                <value>
                    <fullName>MALAYAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InsuranceContent__c</fullName>
        <label>種目詳細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InsuranceManki__c</fullName>
        <inlineHelpText>OPEN POLICYの場合
満期日があるものは、
満期日を入力し、
満期日がないものは、
空欄にしてください。</inlineHelpText>
        <label>保険満期（24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InsuranceShikiMonth__c</fullName>
        <formula>TEXT( MONTH( InsuranceShiki__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>保険始期月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsuranceShiki__c</fullName>
        <label>保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>保険種目</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約者（被保険者）</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BL(契約者（被保険者）)</relationshipLabel>
        <relationshipName>BL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeijoMonthBl__c</fullName>
        <formula>IF ( MONTH(InsuranceManki__c) = 12 , 1, MONTH(InsuranceManki__c) + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計上月(BL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeiyakuArea__c</fullName>
        <label>契約地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>華北</fullName>
                </value>
                <value>
                    <fullName>華中</fullName>
                </value>
                <value>
                    <fullName>江蘇</fullName>
                </value>
                <value>
                    <fullName>華南</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyCde__c</fullName>
        <formula>KeiyakuCompanyName__r.CompanyCd__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約会社コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeiyakuCompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約会社名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BL (契約会社名称)</relationshipLabel>
        <relationshipName>BL1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeiyakuShubetsu__c</fullName>
        <label>契約種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>上海契約特別対応</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoticeMonth__c</fullName>
        <formula>CASE( NoticeRule__c , 
&quot;毎月&quot;,&quot;Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec&quot;,
&quot;発生月&quot;,&quot;Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec&quot;,
&quot;四半期（自然月）&quot;, &quot;Apr,Jul,Oct,Jan&quot;,
&quot;四半期（非自然月）&quot;,CASE(InsuranceShikiMonth__c , 
&quot;1&quot;,&quot;Apr,Jul,Oct,Jan&quot;,
&quot;2&quot;,&quot;May,Aug,Nov,Feb&quot;,
&quot;3&quot;,&quot;Jun,Sep,Dec,Mar&quot;,
&quot;4&quot;,&quot;Jul,Oct,Jan,Apr&quot;,
&quot;5&quot;,&quot;Aug,Nov,Feb,May&quot;,
&quot;6&quot;,&quot;Sep,Dec,Mar,Jun&quot;,
&quot;7&quot;,&quot;Oct,Jan,Apr,Jul&quot;,
&quot;8&quot;,&quot;Nov,Feb,May,Aug&quot;,
&quot;9&quot;,&quot;Dec,Mar,Jun,Sep&quot;,
&quot;10&quot;,&quot;Jan,Apr,Jul,Oct&quot;,
&quot;11&quot;,&quot;Feb,May,Aug,Nov&quot;,
&quot;12&quot;,&quot;Mar,Jun,Sep,Dec&quot;,&quot;&quot;),
&quot;年度末&quot;,&quot;&quot;,
&quot;通知なし&quot;,&quot;&quot;,&quot;&quot;)</formula>
        <label>通知月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoticeRule__c</fullName>
        <inlineHelpText>担当者に3ヶ月単位で通知メールを送ります。
四半期（自然月）：1,4,7,10
四半期（非自然月）：保険始期月から3ヶ月単位</inlineHelpText>
        <label>通知ルール</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>毎月</fullName>
                </value>
                <value>
                    <fullName>四半期</fullName>
                </value>
                <value>
                    <fullName>年度末</fullName>
                </value>
                <value>
                    <fullName>発生月</fullName>
                </value>
                <value>
                    <fullName>通知なし</fullName>
                </value>
                <value>
                    <fullName>四半期（自然月）</fullName>
                </value>
                <value>
                    <fullName>四半期（非自然月）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoticeTantoMail__c</fullName>
        <label>通知担当者メールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NoticeTanto__c</fullName>
        <label>通知担当者</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenPolicy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PayRule__c</fullName>
        <label>精算ルール</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NoticeRule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>毎月</fullName>
                </value>
                <value>
                    <fullName>四半期</fullName>
                </value>
                <value>
                    <fullName>年度末</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonalKeiyakuInsurant__c</fullName>
        <label>個人契約（被保険者）</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShokenNo__c</fullName>
        <label>証券番号</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShozokuArea__c</fullName>
        <label>所属地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KeiyakuArea__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>安徽省</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>福建省</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>山東省</fullName>
                </value>
                <value>
                    <fullName>浙江省</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ハイフォン</fullName>
                </value>
                <value>
                    <fullName>ダナン</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>セブ</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>ペナン</fullName>
                </value>
                <value>
                    <fullName>ジョホールバル</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransferBeforeInsuranceCompany__c</fullName>
        <label>移管元保険会社</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>損保ジャパン（中国）</fullName>
                </value>
                <value>
                    <fullName>三井住友（中国）</fullName>
                </value>
                <value>
                    <fullName>平安</fullName>
                </value>
                <value>
                    <fullName>太平洋</fullName>
                </value>
                <value>
                    <fullName>PICC</fullName>
                </value>
                <value>
                    <fullName>美亜（AIG）</fullName>
                </value>
                <value>
                    <fullName>民安（中国）</fullName>
                </value>
                <value>
                    <fullName>日本興亜（中国）</fullName>
                </value>
                <value>
                    <fullName>東京海上日動（中国）</fullName>
                </value>
                <value>
                    <fullName>華泰財産保険会社</fullName>
                </value>
                <value>
                    <fullName>LIBERTY（香港）</fullName>
                </value>
                <value>
                    <fullName>AIA（香港）</fullName>
                </value>
                <value>
                    <fullName>AIU（香港）</fullName>
                </value>
                <value>
                    <fullName>AXA（香港）</fullName>
                </value>
                <value>
                    <fullName>BlueCross（香港）</fullName>
                </value>
                <value>
                    <fullName>民安（香港）</fullName>
                </value>
                <value>
                    <fullName>三井住友（香港）</fullName>
                </value>
                <value>
                    <fullName>日本興亜（香港）</fullName>
                </value>
                <value>
                    <fullName>PICC（香港）</fullName>
                </value>
                <value>
                    <fullName>損保ジャパン（香港）</fullName>
                </value>
                <value>
                    <fullName>東京海上日動（香港）</fullName>
                </value>
                <value>
                    <fullName>Zurich（香港）</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransferDate__c</fullName>
        <label>移管日付</label>
        <type>Date</type>
    </fields>
    <label>BL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>Insurant__c</columns>
        <columns>InsuranceCompanyName__c</columns>
        <columns>Branch__c</columns>
        <columns>BranchOfInsurance__c</columns>
        <columns>InsuranceManki__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>BL{000000}</displayFormat>
        <label>BL番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Chk_OpenPolicy2</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNULL(InsuranceManki__c)=False, OpenPolicy__c  = True)</errorConditionFormula>
        <errorMessage>満期日とOpenPolicyはどちらか一方のみ入力できます。
OpenPolicyの場合は、OpenPolicyにチェックをつけてください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>chk_OpenPolicy</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNULL(InsuranceManki__c)=True, OpenPolicy__c  = FALSE)</errorConditionFormula>
        <errorMessage>満期日または、OpenPolicyが入力されていません。</errorMessage>
    </validationRules>
</CustomObject>